Property info alignment fix

--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -124,8 +124,11 @@
 }
 
 .property_information{
-    padding: 8px 5px;
-    margin-bottom: 10px;
+    padding: 5px;
+    margin-bottom: 2px;
+}
+.property_information > div{
+    padding-bottom: 3px;
 }
 
 input[type=select] {
@@ -2315,7 +2318,7 @@ h1.pageTitle {
     font-size: 13px;
     line-height: 14px;
     color: #999;
-    padding: 2px 0 8px 0;
+    padding: 2px 0 4px 0;
 }
 .singleTop ul.rating {
     list-style-type: none;
